--- a/src/app/components/pagess/profile/profile-panel/advert-listes/advert-listes.component.html
+++ b/src/app/components/pagess/profile/profile-panel/advert-listes/advert-listes.component.html
@@ -10,7 +10,7 @@
   <!--TABLE -->
   <p-table
       #dt
-      [value]="products"
+      [value]="adverts"
       [globalFilterFields]="['name', 'country.name', 'representative.name']"
       [tableStyle]="{ 'min-width': '65rem' }"
       [(selection)]="selectedProducts"
@@ -21,39 +21,39 @@
   >
 
       <ng-template pTemplate="header">
-
           <tr>
               <th pSortableColumn="name" style="width: 8%;" > Ad <p-sortIcon field="name"></p-sortIcon></th>
               <th style="width: 8%;">Görsel</th>
-              <th pSortableColumn="category" style="width: 5%;">Kategori <p-sortIcon field="category"></p-sortIcon></th>
-              <th pSortableColumn="rating" style="width: 3%;"> Değerlendirme <p-sortIcon field="rating"></p-sortIcon></th>
+              <th pSortableColumn="category" style="width: 5%;"> Kategori <p-sortIcon field="category"></p-sortIcon></th>
+              <th pSortableColumn="date" style="width: 8%;" > İlan Tarihi <p-sortIcon field="advert-date"></p-sortIcon></th>
               <th pSortableColumn="edit/delete" style="width: 3%;"> Düzenle/Sil</th>
           </tr>
-
       </ng-template>
 
-      <ng-template pTemplate="body" let-product>
-
-          <tr>
-              <td>{{ product.name }}</td>
-              <td><img [src]="'https://primefaces.org/cdn/primeng/images/demo/product/' + product.image" [alt]="product.name" width="50" class="shadow-4" /></td>
-              <td>{{ product.category }}</td>
-              <td><p-rating [ngModel]="product.rating" [readonly]="true" [cancel]="false"></p-rating></td>
-              <td>
-                <button pButton pRipple icon="pi pi-pencil" class="p-button-rounded p-button-success mr-2" (click)="editProduct(product)"></button>
-                <span class="button-space"></span>
-                <button pButton pRipple icon="pi pi-trash" class="p-button-rounded p-button-warning" (click)="deleteProduct(product)"></button>
-            </td>
-          </tr>
-
+      <ng-template pTemplate="body" let-advert>
+        <tr>
+          <td>{{ advert.advert_no }}</td>
+          <td>
+            <img [src]="'https://primefaces.org/cdn/primeng/images/demo/product/' + product.image" [alt]="product.name" width="50" class="shadow-4" />
+          </td>
+          <td>{{ advert.advert_title }}</td>
+          <td>{{ advert.advert_text }}</td>
+          <td>{{ advert.advert_date }}</td>
+          <td>{{ advert.situation }}</td>
+          <td>
+            <button pButton pRipple icon="pi pi-pencil" class="p-button-rounded p-button-success mr-2"></button>
+            <span class="button-space"></span>
+            <button pButton pRipple icon="pi pi-trash" class="p-button-rounded p-button-warning"></button>
+          </td>
+        </tr>
       </ng-template>
+      
+      
 
       <ng-template pTemplate="summary">
           <div class="flex align-items-center justify-content-between">In total there are {{ products ? products.length : 0 }} products.</div>
       </ng-template>
-
   </p-table>
-
 </div>
 
 <p-dialog [(visible)]="productDialog" [style]="{ width: '450px' }" header="Pet Details" [modal]="true" styleClass="p-fluid">
@@ -117,3 +117,9 @@
 </p-dialog>
 
 <p-confirmDialog [style]="{ width: '450px' }"></p-confirmDialog>
+
+<!--<div *ngFor="let user of users">
+    <div>
+        {{user.userName}}
+    </div>
+</div> -->
