--- a/src/app/components/pagess/profile/profile-panel/advert-listes/advert-listes.component.html
+++ b/src/app/components/pagess/profile/profile-panel/advert-listes/advert-listes.component.html
@@ -3,7 +3,7 @@
     <p-toast></p-toast>
     <p-toolbar styleClass="mb-4 gap-2">
       <ng-template pTemplate="left">
-          <button pButton pRipple label="İlan Ekle" icon="pi pi-plus" class="p-button-success mr-2 custom-button" (click)="openNew()"></button>
+          <button  (click)="openModalAdd()" pButton pRipple label="İlan Ekle" icon="pi pi-plus" class="p-button-success mr-2 custom-button" (click)="openNew()"></button>
       </ng-template>
     </p-toolbar>
  
@@ -84,9 +84,80 @@
 
 
 
+              <div class="modal fade" tabindex="-1" [class.show]="modalOpenAdd">
+                <!--CSS'i düzenlemezsem çalışmaz-->
+                <div class="modal-dialog">
+                  <div class="modal-content">
+                    <div class="modal-header">
+                      <h5 class="modal-title">İlan Ekle</h5>
+                    </div>
+                    <div class="modal-body">
+                      <form  ngModelOptions="{standalone: true}">
+                    
+                    
+                        <div class="row" >
+                                <div class="col-6 mb-2 mt-3">
+                                    <span class="p-float-label">
+                                        <input name="UserName" pInputText placeholder="Adınızı Giriniz"  class="w-100"  style="border: solid 1px rgba(181, 181, 181, 0.267);"/>
+                                        <label htmlFor="username">Hayvan Adı</label>
+                                    </span>   
+                                </div>
+                                <div class="col-6 mb-2 mt-3"  >   
+                                  <span class="p-float-label">
+                                      <input name="user_bdate" pInputText  class="w-100"  style="border: solid 1px rgba(181, 181, 181, 0.267);"/>
+                                      <label htmlFor="username">İlan Tarihi</label>
+                                  </span>  
+                              </div>
+                        </div>             
+                      <div class="row" >
+                            <div class="col-6 mb-2 mt-3" style="display: flex;" >
+                              <div class="dropdown-container w-100">
+                                  <p-dropdown class="w-100" name="animal_history"  [options]="StatusOptions" optionLabel="label" styleClass="w-100"></p-dropdown>
+                              </div>   
+                          </div>            
+                    </div>
+
+                    <div class="row" >
+                      <div class="col-12 mb-2 mt-3">
+                        <span class="p-float-label">
+                            <textarea name="advert_text" pInputTextarea placeholder="İlan Açıklama"  class="w-100"  style="border: solid 1px rgba(181, 181, 181, 0.267);"></textarea>
+                            <label htmlFor="advert_text">Açıklama</label>
+                        </span>                   
+                    </div>
+                        
+                      
+                            <!-- <span class="p-float-label">
+                                <p-inputMask  mask="999-999-9999" [(ngModel)]="registerRequest.user_gsm"  id="ssn_input" ></p-inputMask>
+                                <label htmlFor="ssn_input">Telefon numaranızı giriniz</label>
+                            </span>                      -->
+                        </div>
+               
+                <!-- <div class="row" >
+                    <div class="col-5 mb-2 mt-3" >
+                        <div class="dropdown-container w-100" >
+                            <p-dropdown class="w-100" name="animal_exist"  optionLabel="label" styleClass="w-100"></p-dropdown>
+                        </div>            
+                    </div>
+                    <div class="col-5 mb-2 mt-3" style="display: flex;" >
+                        <div class="dropdown-container w-100">
+                            <p-dropdown class="w-100" name="animal_history"optionLabel="label" styleClass="w-100"></p-dropdown>
+                        </div>   
+                    </div>
+                </div> -->
+               
+            </form>
+                    </div>
+                    <div class="modal-footer">
+                      <button type="button" class="btn" (click)="closeModalAdd()" style="width: 30%;">İptal</button>
+                      <button class="btn btn-primary" type="submit" style="width: 30%;" >Üye ol</button>
+                    </div>
+                  </div>
+                </div>
+              </div>
 
 
-              
+
+
               <!-- 
                 backend'den id'yi çekemediğimiz için id'yi tespit edemedi frontend kısmında :) aklımızdao lsun. swaggerda getall'da id yi çekemedik :D
               -->
