--- a/src/app/components/about/about.component.html
+++ b/src/app/components/about/about.component.html
@@ -9,12 +9,17 @@
       </div>
       <div class="col-md-6" style="display: flex; justify-content: center; align-items: center;">
         <div class="card-body" style="text-align: center; max-width: 550px;">
-          <h2 class="card-title" style="margin-bottom: 20px;">ABOUT</h2>
+          <h2 class="card-title" style="margin-bottom: 20px; font-style: italic;">Hakkımızda</h2>
           <i class="fas fa-heart fa-lg"></i>
-          <p class="card-text" style="max-width: 300px; " style="margin-top: 20px;">burada bir about kısmı olacak burada bir about kısmı olacak burada bir about kısmı olacak
-            burada bir about kısmı olacak burada bir about kısmı olacak burada bir about kısmı olacak
-            about kısmı olacak burada bir about kısmı olacakabout kısmı olacak burada bir about kısmı olacak
-            about kısmı olacak burada bir about kısmı olacakabout kısmı olacak burada bir about kısmı olacak .</p>
+          <p class="card-text" style="max-width: 300px; " style="margin-top: 20px;">2023 yılında dört arkadaş olarak kurduğumuz PetShip, yenilikçi bir hayvan sahiplendirme sitesidir.
+
+            Misyonumuz, evsiz hayvanların kalıcı ve sevgi dolu yuvalar bulmasını sağlamaktır.
+            
+            PetShip, güvenli bir platform sunarak hayvan severlerle sahiplenmek isteyen hayvanları buluşturmayı amaçlar.
+            
+            Kullanıcı dostu arayüzü ve detaylı profilleriyle PetShip, hayvanlar için en uygun ve sevgi dolu aileleri bulmada yardımcı olur.
+            
+            PetShip olarak, hayvanlara güvenli ve mutlu bir gelecek sunmak için sürekli olarak çalışmaya devam ediyoruz. .</p>
         </div>
       </div>
     </div>
