--- a/src/app/components/banner/banner.component.css
+++ b/src/app/components/banner/banner.component.css
@@ -1,5 +1,24 @@
-/* BANNER */
 .carousel-item img {
-    height: 90vh; /* Resimlerin yüksekliğini 100 viewport yüksekliği olarak ayarlar */
-    object-fit: cover; /* Resmi bozulmadan ekranı kaplayacak şekilde ölçekler */
+    height: 90vh;
+    object-fit: cover; 
 }
+@media (max-width: 992px) {
+    .carousel-item img {
+        height: 50vh;
+        object-fit: cover; 
+    }
+  }
+  
+@media (max-width: 576px) {
+    .carousel-item img {
+        height: 40vh;
+        object-fit: cover; 
+    }
+  }
+  
+  
+  
+  
+  
+  
+  
