--- a/src/app/components/pagess/homee/homepage.component.css
+++ b/src/app/components/pagess/homee/homepage.component.css
@@ -3,7 +3,7 @@
 
 /* KATEGORİELR VE KARTLAR*/
 .btn-img{
-    max-width: 150px;
+    max-width: 120px;
     height: auto;
   }
   .btn-img {
@@ -106,58 +106,72 @@
 
   @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700;800;900&display=swap');
 
-
-  
-  .container .card
-  {
-      max-width: 300px;
-      height: 215px;
-      margin: 80px 10px;
-      padding: 20px 15px;
-      box-shadow: 0 5px 20px rgba(0,0,0,0.5);
-      transition: 0.7s ease-in-out;
-  }
-  .container .card:hover
-  {
-      height: 450px;
-  }
-  .container .card .imgContainer
-  {
-      position: relative;
-      width:250px;
-      height:250px;
-      top:-50px;
-      left:10px;
-      z-index: 1;
-      box-shadow: 0 5px 20px rgba(0,0,0,0.2);
-  }
-  .container .card .imgContainer img
-  {
-      max-width: 100%;
-      border-radius: 4px;
-  }
-  .container .card .content
-  {
-      position: relative;
-      margin-top: -140px;
-      padding: 10px 15px;
-      text-align: center;
-      color:#111;
-      visibility: hidden;
-      opacity: 0;
-      pointer-events: none;
-      transition: 0.3s ease-in-out;
-  }
-  .container .card:hover .content
-  {
-      visibility: visible;
-      opacity: 1;
-      margin-top: -40px;
-      transition-delay: 0.3s;
+  .container .card {
+    max-width: 300px;
+    height: 215px;
+    margin: 70px 10px;
+    padding: 20px 15px;
+    box-shadow: 0 5px 20px rgba(0, 0, 0, 0.5);
+    transition: 0.7s ease-in-out;
   }
   
-  @media (max-width: 330px){
-      .container .card .imgContainer{
-          left: -2px;
-      }
+  .container .card:hover {
+    height: 450px;
   }
+  
+  .container .card .imgContainer {
+    position: relative;
+    width: 250px;
+    height: 250px;
+    top: -40px;
+    left: 10px;
+    z-index: 1;
+    box-shadow: 0 5px 20px rgba(0, 0, 0, 0.2);
+  }
+  
+  .container .card .imgContainer img {
+    max-width: 100%;
+    border-radius: 4px;
+  }
+  
+  .container .card .content {
+    position: relative;
+    margin-top: -140px;
+    padding: 10px 15px;
+    text-align: center;
+    color: #111;
+    visibility: hidden;
+    opacity: 0;
+    pointer-events: none;
+    transition: 0.3s ease-in-out;
+  }
+  
+  .container .card:hover .content {
+    visibility: visible;
+    opacity: 1;
+    margin-top: -40px;
+    transition-delay: 0.3s;
+  }
+  
+  @media (max-width: 330px) {
+    .container .card .imgContainer {
+      left: -2px;
+    }
+  }
+  
+  .card {
+    width: 33.33%;
+  }
+  
+  @media (max-width: 992px) {
+    .card {
+      width: 50%;
+    }
+  }
+  
+  @media (max-width: 768px) {
+    .card {
+      width: 100%;
+    }
+  }
+  
