--- a/src/app/components/pagess/profile/profile-panel/advert-listes/advert-listes.component.html
+++ b/src/app/components/pagess/profile/profile-panel/advert-listes/advert-listes.component.html
@@ -80,13 +80,13 @@
                       <div class="row" >
                               <div class="col-6 mb-2 mt-3">
                                   <span class="p-float-label">
-                                      <input name="advert_title" [(ngModel)]="advertRequest.advert_title" pInputText placeholder="Hayvan adı giriniz"  class="w-100"  style="border: solid 1px rgba(181, 181, 181, 0.267);"/>
+                                      <input name="advert_title" [(ngModel)]="advertRequest.advert_title" pInputText placeholder="Hayvan adı giriniz"  class="w-100"  style="border: solid 1px rgba(181, 181, 181, 0.267);" required>
                                       <label htmlFor="advert_title">Hayvan Adı</label>
                                   </span>   
                               </div>
                               <div class="col-6 mb-2 mt-3"  >   
                                 <span class="p-float-label">
-                                    <input name="advert_date" [(ngModel)]="advertRequest.advert_date" pInputText  class="w-100"  style="border: solid 1px rgba(181, 181, 181, 0.267);"/>
+                                    <input name="advert_date" [(ngModel)]="advertRequest.advert_date" pInputText  class="w-100"  style="border: solid 1px rgba(181, 181, 181, 0.267);" required>
                                     <label htmlFor="advert_date">İlan Tarihi</label>
                                 </span>  
                             </div>
@@ -94,13 +94,13 @@
                       <div class="row" >
                           <div class="col-6 mb-2 mt-3" style="display: flex;" >
                             <span class="p-float-label">
-                              <input name="advert_no" [(ngModel)]="advertRequest.advert_no" pInputText  class="w-100"  style="border: solid 1px rgba(181, 181, 181, 0.267);"/>
+                              <input name="advert_no" [(ngModel)]="advertRequest.advert_no" pInputText  class="w-100"  style="border: solid 1px rgba(181, 181, 181, 0.267);" required>
                               <label htmlFor="advert_no">İlan No</label>
                           </span>  
                           </div>   
                           <div class="col-6 mb-2 mt-3" style="display: flex;" >
                             <span class="p-float-label">
-                              <input name="advert_img" [(ngModel)]="advertRequest.advert_img" pInputText  class="w-100"  style="border: solid 1px rgba(181, 181, 181, 0.267);"/>
+                              <input name="advert_img" [(ngModel)]="advertRequest.advert_img" pInputText  class="w-100"  style="border: solid 1px rgba(181, 181, 181, 0.267);" required>
                               <label htmlFor="advert_img">Resim yolu</label>
                           </span>  
                           </div>  
