--- a/src/app/modules/auth/loginc/loginc.component.html
+++ b/src/app/modules/auth/loginc/loginc.component.html
@@ -26,7 +26,7 @@
                                 <span class="p-inputgroup-addon">
                                     <i class="pi pi-lock"></i>
                                 </span>
-                                <input pInputText placeholder="Şİfre" name="password"  class="w-100" [(ngModel)]="loginRequest.Password" style="border: solid 1px  rgba(181, 181, 181, 0.267);"required>
+                                <input  [type]="'password'" pInputText placeholder="Şİfre" name="password"  class="w-100" [(ngModel)]="loginRequest.Password" style="border: solid 1px  rgba(181, 181, 181, 0.267);"required>
                             </div>
                         </div>
                     </div>
